# tfd128

./: README.md  pyproject.toml
base-snapshot/: changelog.html  history.html  index.html  manual.html  protocol.html
base-snapshot/css/: tfd128.css
src/tfd128/: tfd128.py  tfd128_cli.py
tests/: test.py
